// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 22.639302919194204,
            "flexDirection": "row",
            "height": 73.26233572263675,
            "justifyContent": "center",
            "width": 73.26233572263675,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 2.041415953038251,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "flex",
              "fontSize": 36.631167861318374,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 13.991864942124174,
              "color": "#555",
              "display": "flex",
              "fontSize": 22.639302919194204,
              "left": 13.991864942124174,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 22.639302919194204,
            "flexDirection": "row",
            "height": 73.26233572263675,
            "justifyContent": "center",
            "width": 73.26233572263675,
          },
          Object {
            "backgroundColor": "#4285f4",
            "borderColor": "black",
            "borderWidth": 2.041415953038251,
            "elevation": 3.3030110120158906,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#fefefe",
              "display": "flex",
              "fontSize": 36.631167861318374,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 13.991864942124174,
              "color": "#fefefe",
              "display": "flex",
              "fontSize": 22.639302919194204,
              "left": 13.991864942124174,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  accessible={false}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 22.639302919194204,
      "flexDirection": "row",
      "height": 73.26233572263675,
      "justifyContent": "center",
      "width": 73.26233572263675,
    }
  }
/>
`;

exports[`A snapshot of an inactive cell in Explore mode 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 22.639302919194204,
            "flexDirection": "row",
            "height": 73.26233572263675,
            "justifyContent": "center",
            "width": 73.26233572263675,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 2.041415953038251,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "flex",
              "fontSize": 36.631167861318374,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 13.991864942124174,
              "color": "#555",
              "display": "flex",
              "fontSize": 22.639302919194204,
              "left": 13.991864942124174,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Quiz mode 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 22.639302919194204,
            "flexDirection": "row",
            "height": 73.26233572263675,
            "justifyContent": "center",
            "width": 73.26233572263675,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 2.041415953038251,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "none",
              "fontSize": 36.631167861318374,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 13.991864942124174,
              "color": "#555",
              "display": "none",
              "fontSize": 22.639302919194204,
              "left": 13.991864942124174,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
